added delete user

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>AppUserStorage</title>
         <script src="appUserJS.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="main">
@@ -11,6 +12,7 @@
                 <button onclick="getUsers()" id="get">Get Users</button>
                 <button onclick="deleteUser()" id="delete">Delete User</button>
                 <button onclick ="editUser()" id="edit">Edit User</button>
+                <button onclick="clear()" id="clear">Clear</button>
             </div>
             <div class="inputField">
                 <input type="text" id="nameInput" placeholder="Name" />
